--- a/css/slider.css
+++ b/css/slider.css
@@ -50,7 +50,6 @@
 .tips_title{
     width: fit-content;
     margin-bottom: 5%;
-    vertical-align: middle;
 }
 
 .tips_title p{
@@ -63,6 +62,9 @@
     padding: 2% 2%;
     width: 100%;
 }
+.tips_table{
+    vertical-align: middle;
+}
 
 .tips_table,.tips_table tr,.tips_table th, .tips_table td{
     border: .1rem rgba(214, 214, 214 ,1) solid;
@@ -71,6 +73,7 @@
 
 .tips_table th, .tips_table td{
     padding: 3% 6%;
+    vertical-align: middle;
 }
 
 .tips_table td a{
