--- a/css/layout.css
+++ b/css/layout.css
@@ -10,7 +10,7 @@ header{
     position: fixed;
     width: 100vw;
     height: 10vh;
-    background-color: #E6E6E6;
+    background-color: rgb(255, 255, 255, 1);
 }
 
 .image_slider{
