--- a/css/fakeLoader.css
+++ b/css/fakeLoader.css
@@ -4,40 +4,41 @@
 ***********************/
 
 .spinner7 {
-  width: 30vw;
-  height: 7vh;
+  width: 15vw;
+  height: 5vh;
   text-align: center;
 }
 
 .spinner7>div {
-  background-color: rgba(67, 238, 44, 1);
-  height: 6vh;
-  width: 2.5vw;
-  margin-left: 2vw;
-  border-radius: 25%;
+  margin-left: 1vw;
+  border-radius: 10%;
   display: inline-block;
   -webkit-animation: stretchdelay 0.7s infinite ease-in-out;
   animation: stretchdelay 0.7s infinite ease-in-out;
 }
 
 .spinner7 .circ2 {
+  background-color: rgba(34, 216, 195, 1);
+  height: 4vh;
+  width: 2vw;
   -webkit-animation-delay: -0.6s;
   animation-delay: -0.6s;
 }
 
 .spinner7 .circ3 {
+  background-color: rgba(73, 234, 129, 1);
+  height: 7vh;
+  width: 2vw;
   -webkit-animation-delay: -0.5s;
   animation-delay: -0.5s;
 }
 
 .spinner7 .circ4 {
+  background-color: rgb(150, 216, 36, 1);
+  height: 10vh;
+  width: 2vw;
   -webkit-animation-delay: -0.4s;
   animation-delay: -0.4s;
-}
-
-.spinner7 .circ5 {
-  -webkit-animation-delay: -0.3s;
-  animation-delay: -0.3s;
 }
 
 @-webkit-keyframes stretchdelay {
