style(slider.css)javaが下にくる問題を解決

--- a/css/slider.css
+++ b/css/slider.css
@@ -42,8 +42,11 @@
     padding: .5%;
 }
 
+.program_lang_icon{
+    width: 100%;
+}
 .program_lang_icon i{
-    font-size: 10vw;
+    font-size: 11vw;
     padding: 0 1%;
 }
 
