--- a/css/slider.css
+++ b/css/slider.css
@@ -33,13 +33,13 @@
 }
 
 .tips_solicit .tips{
-    max-width: 70%;
+    max-width: 80%;
     max-height: 60%;
 }
 
 .tips_solicit p{
-    font-size: 1.5vw;
-    padding: .5%;
+    font-size: 2vw;
+    padding: 1% 0;
 }
 
 .program_lang_icon{
