--- a/css/footer.css
+++ b/css/footer.css
@@ -3,15 +3,36 @@
  */
 
 footer{
+    background-image: url("../img/footer_img.jpg");
+    background-size: cover;
+    width: auto;
+    height: 30vh;
     position: relative;
-    background-image: url("./img/footer_img.jpg");
 }
 
-
-.footer_logo{
+.footer_layout{
     position: absolute;
-    width: 10%;
-    height: 50%;
-    bottom: 6vh;
-    left: 15vw;
+    background-color: rgba(121, 121, 121 ,0.8);
+    height: 80%;
+    right: 10%;
+    bottom: 5%;
 }
+
+.footer_layout h2{
+    margin-bottom: 5%;
+    color: rgba(255, 255, 255, 1);
+}
+
+.footer_layout ul li{
+    float: left;
+    list-style: none;
+    padding: 3% 0;
+    width: 15vw;
+ }
+
+.footer_layout ul li a{
+    font-size: 1rem;
+    color: rgba(255, 255, 255, 1);
+    text-decoration: none;
+}
+
