style(media)directoryの変更

--- a/css/footer.css
+++ b/css/footer.css
@@ -3,7 +3,7 @@
  */
 
 footer{
-    background-image: url("../img/footer_img.jpg");
+    background-image: url("../media/imgs/footer/footer_img.jpg");
     background-size: cover;
     width: auto;
     height: 30vh;
