--- a/css/layout.css
+++ b/css/layout.css
@@ -3,7 +3,8 @@
  */
 
 #site_box{
-    margin: 0 10vw;
+    height: 100vh;
+    width: 100vw;
 }
 
 header{
@@ -30,9 +31,10 @@ header{
 }
 
 .layout_margin_b{
-    margin-bottom: 2vh;
+    margin-bottom: 20vh;
+    height: 15%;
 }
 
 .size_container{
-    width: 45%;
+    width: 100%;
 }
