--- a/css/style.css
+++ b/css/style.css
@@ -10,5 +10,5 @@
 @import "./logo.css";
 @import "./nav.css";
 @import "./footer.css";
-@import "./container.css";
+@import "./aboutContainer.css";
 @import "./link.css";
