--- a/css/aboutContainer.css
+++ b/css/aboutContainer.css
@@ -2,27 +2,31 @@
  *  aboutContainer style
  */
 
- .back_img{
-    background-image: url(../img/layout_backimg.png);
-    background-size: 100% 100%;
+ .back_size_top{
     width: 100%;
     height: 100%;
     margin-top: 12vh;
  }
 
- .about_container{
+.about_container{
     position: relative;
  }
+
+.about_chiepro_color{
+    background-color: rgba(177, 255, 153, 0.466);
+}
 
 .about_container h1{
     color: rgba(68, 68, 68, 1);
     position: absolute;
     top: 10%;
-    left: 40%;
+    left: 35%;
+    text-align: center;
+    width: 30vw;
     font-size: 2.5vw;
 }
 
-.about_container img{
+.about_container_img{
     position: absolute;
     top: 20%;
     right: 15%;
