--- a/css/aboutContainer.css
+++ b/css/aboutContainer.css
@@ -2,71 +2,57 @@
  *  aboutContainer style
  */
 
- .about_container{
-    position: relative;
- }
-
 .about_container h1{
-    margin-top: 12vh;
+    margin-top: 15vh;
     color: rgba(68, 68, 68, 1);
-    position: absolute;
-    top: 10%;
-    left: 40%;
     font-size: 2.5vw;
 }
 
 .about_container img{
-    position: absolute;
-    top: 20%;
-    right: 15%;
     width: auto;
     height: auto;
+    float: right;
+    margin: 5% 15% 0 0;
 }
 
 .about_table{
-    position: absolute;
-    top: 25%;
-    left: 20%;
-    width: 80%;
+    width: 55%;
     color: rgba(68, 68, 68, 1);
     text-align: left;
+    margin-left: 10%;
 }
 
 .about_table th,td{
-    font-size: 1.1vw;
-    padding: 1% .1%;
+    font-size: 1.2vw;
+    padding: 3% 2%;
 }
 
 /**
  *  モバイル用のレイアウト
  */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 900px) {
     .about_container img {
         display: none;
      }
 
      .about_container h1{
-        position: absolute;
-        top: 10%;
-        left: 35%;
         font-size: 6vw;
+        margin-bottom: 1vh;
      }
 
      .about_table{
-        position: absolute;
-        text-align: left;
-        left: 10%;
-        top: 20%;
         color: rgba(68, 68, 68, 1);
+        width: 80%;
     }
 
     .about_table th,td{
         font-size: 2.7vw;
-        padding: 5% 0;
+        line-height: 3vh;
     }
 
     .about_table th{
-        width: 20%;
+        width: 25%;
     }
 }
+
