--- a/css/aboutContainer.css
+++ b/css/aboutContainer.css
@@ -3,7 +3,7 @@
  */
 
 .about_title h1{
-    margin-top: 5vh;
+    margin: 7vh 0;
     color: rgba(68, 68, 68, 1);
     font-size: 2.5vw;
 }
@@ -50,13 +50,12 @@
      }
 
      .about_table{
-        color: rgba(68, 68, 68, 1);
         width: 80%;
     }
 
     .about_table th,td{
-        font-size: 2.7vw;
-        line-height: 3vh;
+        font-size: 3vw;
+        line-height: 4vh;
     }
 
     .about_table th{
