--- a/css/aboutPurpose.css
+++ b/css/aboutPurpose.css
@@ -4,12 +4,11 @@
 
 .about_purpose{
     color: rgba(68, 68, 68, 1);
-    font-size: 2.5vw;
     margin: 0 auto;
     width: 80%;
 }
 
-.purpose_text p{
+.about_text p{
     font-size: 1.1vw;
     padding: 3vh 0;
 }
@@ -25,13 +24,13 @@
         display: none;
      }
 
-     .about_purpose h1{
-        font-size: 5vw;
+     .about_title h1{
+        font-size: 6vw;
         margin-bottom: 1vh;
      }
 
-    .purpose_text p{
-        font-size: 2.7vw;
+    .about_text p{
+        font-size: 3vw;
         line-height: 4vh;
     }
 
