--- a/css/aboutTalent.css
+++ b/css/aboutTalent.css
@@ -6,3 +6,21 @@
     font-size: 1.1vw;
     margin: 13vh 0;
 }
+
+@media only screen and (max-width: 1200px) {
+
+    .about_purpose img {
+        display: none;
+     }
+
+     .about_title h1{
+        font-size: 6vw;
+        margin-bottom: 1vh;
+     }
+
+    .talent_text p{
+        font-size: 3vw;
+        line-height: 4vh;
+    }
+
+}
