--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,5 @@
 @import "./aboutPurpose.css";
 @import "./aboutTalent.css";
 @import "./members.css";
+@import "./development.css";
+@import "./iziModal.css";
