--- a/css/form.css
+++ b/css/form.css
@@ -1,11 +1,9 @@
 /**
  *  form style
  */
-
-.content_form{
-    margin: 0 auto;
-    width: 80vw;
- }
+.content_table{
+    width: 100%;
+}
 
 .form_table tr{
     border: solid #9e9e9e;
@@ -22,6 +20,10 @@
     text-align: left;
 }
 
+.form_table td{
+    width: 1vw;
+}
+
 .require{
     color: red;
 }
@@ -30,29 +32,15 @@
     text-align: center;
 }
 
-.form_table td{
-    width: 60vw;
-}
-
 .table_center span{
    margin: 0 10vw;
 }
 
-.aho{
-}
 
 /**
  *  モバイル用のレイアウト
  */
 
  @media only screen and (max-width: 900px) {
-    table {
-        border-collapse: collapse;
-      }
-      table td, table th {
-        padding: 10px;
-      }
-      table th {
-        background-color: #eee;
-      }
+
 }
