--- a/css/aboutContainer.css
+++ b/css/aboutContainer.css
@@ -29,9 +29,13 @@
     text-align: left;
 }
 
+.about_table th{
+    width: 10vw;
+}
+
 .about_table th,.about_table td{
     font-size: 1.5vw;
-    padding: 2vh 0;
+    padding: 2vh 1.3vw;
 }
 
 /**
@@ -52,7 +56,7 @@
         width: 80%;
     }
 
-    .about_table th,td{
+    .about_table th, .about_table td{
         font-size: 3vw;
         line-height: 4vh;
     }
