--- a/css/common.css
+++ b/css/common.css
@@ -7,9 +7,9 @@
   }
 
 body{
+    background-image: url("../img/block_sky.png");
     text-align: center;
     font-family: "MyFont", Meiryo, sans-serif;
-    background-image: url('../img/block_sky.jpg') !important;
 }
 
 img{
