--- a/css/aboutContainer.css
+++ b/css/aboutContainer.css
@@ -3,10 +3,10 @@
  */
 
 .about_title h1{
-    margin: 5% auto;
+    margin: 40vh auto 5vh auto;
+    padding-top: 2vh;
     font-size: 2.5vw;
-    width: 15vw;
-    background: linear-gradient(transparent 50%, #75ff8c 50%);
+    width: 33vw;
 }
 
 .about_container{
@@ -15,13 +15,6 @@
     align-self: center;
     width: 80%;
     margin: 0 auto;
-    margin-bottom: 20vh;
-    padding: 0.2em 0.5em;
-    background: rgb(202, 255, 195);
-    box-shadow: 0px 0px 0px 10px rgb(202, 255, 195);
-    border: dashed .2rem #ffc3c3;
-    border-radius: .4vw;
-    z-index: -2;
 }
 
 .about_container p{
@@ -69,7 +62,7 @@
     }
 
     .about_table th, .about_table td{
-        font-size: 3vw;
+        font-size: 6vw;
         line-height: 4vh;
     }
 
