--- a/css/common.css
+++ b/css/common.css
@@ -7,14 +7,26 @@
   }
 
 body{
-    background-image: url("../img/block_sky.png");
     text-align: center;
     font-family: "MyFont", Meiryo, sans-serif;
+    background: url("../img/background.png") center 100px no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    color: rgba(71, 71, 71, 1);
 }
 
 img{
     width: 100%;
     height: 100%;
+}
+
+
+.frame{
+    color: rgba(68, 68, 68, 1);
+    margin: 0 auto;
+    background-color: rgba(236, 255, 231, 0.7);
+    border-radius: 3vw;
+    width: 90%;
 }
 
 .fit_width{
