--- a/css/form.css
+++ b/css/form.css
@@ -114,3 +114,15 @@ input[type=email]{
  *  モバイル用のレイアウト
  */
 
+ @media only screen and (max-width: 1200px){
+    .form_table table{
+        display: block;
+        float: left;
+    }
+    .form_table th,
+    .form_table td{
+    width: 100%;
+    display: block;
+    border-top: none;
+    }
+ }
